# olympus

./: .gitignore  AGENTS.md  Cargo.toml  HANDOVER.md  Makefile  README.md  justfile  package.json  tsconfig.json
.github/workflows/: e2e.yml
.maestro/: COVERAGE.md  config.live.yaml  config.mobile.yaml  config.prod.yaml  config.yaml
adapters/claude-agent-acp/: package-lock.json  package.json
apps/runtime/: package.json
apps/web/: package.json  vite.config.ts
convex/: commands.ts  runtime.ts  schema.ts
crates/control-plane/: Cargo.toml
crates/control-plane/examples/: acp_smoke.rs
crates/control-plane/src/: auth.rs  auth_store.rs  compress.rs  edit_model.rs  enroll.rs  event.rs  hall.rs  import.rs  irc.rs  jobs.rs  legacy_log.rs  lib.rs  log.rs  main.rs  node.rs  package.rs  postgres_store.rs  projects.rs  proxy.rs  repos.rs  search.rs  state_db_reader.rs  sync.rs  vault.rs
crates/control-plane/src/adapter/: claude_code.rs  codex.rs  hermes.rs  mod.rs
crates/control-plane/src/bridge/: acp.rs  hermes.rs  mod.rs
crates/control-plane/src/edge/: caddy.rs  driver.rs  mod.rs
crates/control-plane/src/server/: agents.rs  bridge_mgr.rs  capability.rs  dto.rs  envoy_conn.rs  identity.rs  mod.rs  principal.rs  terminal_ws.rs  test_support.rs  tests.rs  ws.rs
crates/control-plane/src/server/routes/: agents.rs  cards.rs  edge.rs  enroll.rs  events.rs  irc.rs  jobs.rs  mod.rs  nodes.rs  organizations.rs  packages.rs  projects.rs  registry.rs  repos.rs  search.rs  sessions.rs  setup.rs  support.rs  vaults.rs
crates/control-plane/src/views/: card.rs  message.rs  mod.rs  project.rs  registry.rs  repo.rs  session.rs  setup.rs
crates/control-plane/tests/: auth_store.rs  iroh_envoy_integration.rs  postgres_storage.rs
crates/envoy/: Cargo.toml
crates/envoy/src/: discovery.rs  job_table.rs  lib.rs  main.rs  mock_runtime.rs  observer.rs  pty.rs  runtime_table.rs  spool.rs  transport.rs
crates/envoy/src/adapter/: claude_code.rs  codex.rs  hermes.rs  mod.rs
crates/envoy/src/bridge/: acp.rs  child.rs  client.rs  framing.rs  hermes.rs  mod.rs
crates/envoy/tests/: install_envoy_script.rs  iroh_transport.rs
crates/proto/: Cargo.toml  build.rs
deploy/caddy/: README.md  caddy.json
deploy/systemd/: olympus-caddy.service
docs/: SWARM_WORKFLOW.md  api-contract.md  autonomous-loop.md  codec-size-and-batch-throughput-measurement.md  fxbuilder-job-runner.md  harness.md  ports.md
docs/adrs/: .hermes-tmp.D11Kov  0001-clean-room-convex-react-bun.md  0002-olympus-fleet-control-plane.md  0003-remove-convex-rust-native-substrate.md  0004-knowledge-vaults-markdown-first-jj-merge.md  0005-org-scoped-local-first-resource-model.md  0006-omp-blueprint-declarative-replication.md  0007-per-node-agent-discovery.md  0008-hall-envoy-split-rolling-deploy.md  0009-redb-to-sqlite-memory-reduction.md  0010-hall-auth-and-client-connections.md  0011-jobs-mcp-capabilities-sandboxing.md  0012-programmable-operating-environment.md  0013-workflow-kernel-bounded-chains.md  0014-caddy-external-reverse-proxy.md  0015-managed-apps.md  0016-single-hall-durable-envoy-architecture.md  0016-vault-storage-sync-and-backup-separation.md  0017-session-cutover-and-remote-development-plane.md  0018-opentelemetry-observability-and-ttl-session-diagnostics.md  0019-agent-and-human-cli-interface.md  0020-client-state-projection-and-stream-correctness.md  0021-operator-cockpit-floating-workspace.md  0023-shared-workbench-tabs-and-split-grid.md  0024-secret-store-connections-and-auth-broker.md  0025-first-class-repositories-and-github-app.md  0026-project-home-vaults-and-provider-backed-boards.md  0027-flat-session-spaces-and-typed-invocation-graphs.md  footgun-1-edit-model-resolution.md
docs/architecture/: architecture.md
docs/brd/: 0001-olympus-mvp.md
docs/cards/: card-a-repo-attach.md  card-b-envoy-detection.md
docs/design/: DESIGN_SYSTEM.md  VISION.md  postgres-rag-memory.md  vault-milkdown-integration-notes.md
docs/diagrams/: agent-cli-operation-seam.html  client-state-projection.html  observability-dataflow.html  session-cutover-remote-development.html  shared-workbench-tabs.html
docs/harness/: browser-qa.md
docs/operations/: development-production-split.md  hall-auth-bootstrap.md  hall-backup-recovery.md
docs/plans/: 2026-06-24-react-convex-bun-migration.md  2026-06-28-olympus-mvp.md  2026-06-29-olympus-long-horizon-roadmap.md  2026-06-29-olympus-ui-roadmap.md  2026-07-03-olympus-usable-5-surfaces.md  2026-07-04-e2e-coverage-pipeline.md  2026-07-05-next-phase-backlog.md  (+10 more)
hermes-patches/: README.md  manifest.toml  patchctl.sh
scripts/: deploy-production-on-terminus.sh  deploy.sh  envoy-bootstrap.sh  install-envoy.sh  olympus_job.py  promote-production.sh
systemd/: olympus-envoy@.service  olympus-fxbuilder.service  olympus-hall.service
ui/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  playwright.live.config.ts  playwright.prod.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
ui/src/: api.ts  (+15 more)
(+267 files in other folders)
