[workspace]
members = ["crates/control-plane"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
redb = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
zstd = "0.13"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
rusqlite = "0.32"
tantivy = "0.22"
axum = { version = "0.8", features = ["ws"] }
serde_json = "1"
rand = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
async-trait = "0.1"
futures = "0.3"
tokio-stream = "0.1"
tokio-tungstenite = "0.24"
