[workspace]
members = ["crates/control-plane", "crates/envoy", "crates/proto"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
postcard = { version = "1", features = ["alloc"] }
zstd = "0.13"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
rusqlite = "0.32"
tantivy = "0.22"
axum = { version = "0.8", features = ["ws"] }
serde_json = "1"
rand = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
async-trait = "0.1"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-tungstenite = "0.24"
uuid = { version = "1", features = ["v4"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "tokio"] }
http-body-util = "0.1"
argon2 = "0.5"
