[package]
name = "olympus-control-plane"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
redb.workspace = true
serde.workspace = true
postcard.workspace = true
zstd.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tantivy.workspace = true
rusqlite = { workspace = true, features = ["bundled"] }
tokio.workspace = true
axum.workspace = true
serde_json.workspace = true
serde_yaml = "0.9"
rand.workspace = true
tower.workspace = true
tower-http.workspace = true
async-trait.workspace = true
futures.workspace = true
tokio-stream.workspace = true
uuid.workspace = true
hostname = "0.4"
hyper.workspace = true
hyper-util = { workspace = true }
http-body-util.workspace = true

[dev-dependencies]
tempfile = "3"
tokio-tungstenite.workspace = true
