[package]
name = "olympus-envoy"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
olympus-proto = { path = "../proto" }
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile = "3"
