[package]
name = "olympus-envoy"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "olympus-envoy"
path = "src/main.rs"

[dependencies]
olympus-proto = { path = "../proto" }
anyhow.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
hostname = "0.4"
iroh = "1"
rusqlite = { workspace = true, features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
